test/message/promise_reject.out
exit event emitted
*test*message*promise_reject.js:*
Promise.reject(new Error('oops'));
               ^

Error: oops
    at *test*message*promise_reject.js:*:*
    at Module._compile (module.js:*:*)
    at Object.Module._extensions..js (module.js:*:*)
    at Module.load (module.js:*:*)
    at tryModuleLoad (module.js:*:*)
    at Function.Module._load (module.js:*:*)
    at Module.runMain (module.js:*:*)
    at run (bootstrap_node.js:*:*)
    at startup (bootstrap_node.js:*:*)
    at bootstrap_node.js:*:*
